<resources>
    <string name="app_name">TaskThree</string>

    <string name="welcome">Welcome</string>
    <string name="existingUser">Existing User</string>
    <string name="newUser">New User</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="please_wait">Please Wait</string>
    <string name="getting_location">Accessing Location</string>
    <string name="loading_images">Loading Images</string>
    <string name="uploading_image">Uploading Image</string>

    <string name="create_account">Create Account</string>
    <string name="user_name">Username</string>
    <string name="re_password">Re-enter password</string>
    <string name="pass_text">Password must be alphanumeric and atleast six characters</string>
    <string name="password_data">Password must be alphanumeric and atleast six characters</string>
    <string name="i_agree">I agree to the</string>
    <string name="terms_conditions">Terms of Services</string>

    <string name="my_app">My App</string>
    <string name="view_gallery">View Gallery</string>
    <string name="view_lat_loc">View latest location</string>

    <string name="gallery">Gallery</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_image">Add Image</string>

    <string name="status">Status</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="image_failed">Image Failed</string>

    <string name="map">Map</string>
    <string name="google_maps_api_key">AIzaSyD0elYs9IOnwebWmSgKhMOLIWEVvGw_D7k</string>
    <string name="address">Address</string>
    <string name="place_address">Hitech City Rd, Patrika Nagar, HITEC City, Hyderabad, Telangana 500081</string>
    <string name="date_and_time">Date and time</string>
    <string name="update_location">Update location</string>

    <string name="notification_channel_id">Task 3 Channel Id</string>

</resources>