<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_welcome_screen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/opensanssemibold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/clr_white"
        android:textSize="@dimen/text_size_30dp"

        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tv_existing_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="70dp"
        android:fontFamily="@font/opensansregular"
        android:gravity="center"
        android:text="@string/existingUser"
        android:textColor="@color/clr_white"
        android:textSize="@dimen/text_size_16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"

        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_bg_white_color"
        android:fontFamily="@font/opensansregular"
        android:text="@string/login"
        android:textColor="@color/clr_blue"

        app:layout_constraintBottom_toTopOf="@id/tv_new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_existing_user"


        />


    <TextView
        android:id="@+id/tv_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="130dp"
        android:fontFamily="@font/opensansregular"
        android:gravity="center"
        android:text="@string/newUser"
        android:textColor="@color/clr_white"
        android:textSize="@dimen/text_size_16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_bg_white_color"
        android:fontFamily="@font/opensansregular"
        android:text="@string/signup"
        android:textColor="@color/clr_blue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_user"


        />


</androidx.constraintlayout.widget.ConstraintLayout>