<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_home"
        app:cardElevation="5dp"
        android:padding="5dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:id="@+id/toolbar_home"
            >

            <TextView
                android:id="@+id/tv_my_app"
                android:layout_width="95dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/opensanssemibold"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:text="@string/my_app"
                android:textColor="@color/clr_black"
                android:textSize="20dp"
                android:layout_gravity="center"


                />

        </androidx.appcompat.widget.Toolbar>


    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_gallery_home"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"

        android:padding="5dp"
        android:background="@drawable/btn_bg_blue_color"
        android:fontFamily="@font/opensansregular"
        android:text="@string/view_gallery"
        android:textColor="@color/clr_white"
        android:gravity="center"
        android:foregroundGravity="center"

        app:layout_constraintTop_toBottomOf="@id/card_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_location_home"


        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_location_home"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:padding="5dp"
        android:background="@drawable/btn_bg_blue_color"
        android:fontFamily="@font/opensansregular"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/view_lat_loc"
        android:textColor="@color/clr_white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gallery_home"


        />



</androidx.constraintlayout.widget.ConstraintLayout>